# solana-plinko-smart-contract

./: Anchor.toml  README.md  package-lock.json  package.json
programs/solana-plinko-smart-contract/: Cargo.toml
programs/solana-plinko-smart-contract/src/: account.rs  errors.rs  lib.rs  misc.rs  utils.rs
programs/solana-plinko-smart-contract/src/instructions/: fulfill_random_words.rs  initialize.rs  lock_odds.rs  mod.rs  play_game.rs  set_max_balls.rs  set_min_buy_in.rs  set_paused.rs  set_payout.rs  set_platform_fee.rs  withdraw_from_vault.rs
tests/: solana-plinko-smart-contract.ts
